--- a/batterysense/index.html
+++ b/batterysense/index.html
@@ -10,7 +10,7 @@
   <div class="app-container">
     <header>
       <div class="logo">
-        <img src="assets/icons/icon.png" alt="BatterySense Logo">
+        <img src="assets/icons/battery-icon.png" alt="BatterySense Logo">
         <h1>BatterySense</h1>
       </div>
       <div class="tabs">
@@ -36,6 +36,14 @@
               <p>Status: <span id="charging-status">Unknown</span></p>
               <p>Health: <span id="battery-health">Unknown</span></p>
               <p>Time remaining: <span id="time-remaining">Unknown</span></p>
+            </div>
+            
+            <!-- Multiple Battery Indicator (hidden by default) -->
+            <div id="multi-battery-indicator" style="display: none;" class="multi-battery">
+              <h3>Multiple Batteries Detected</h3>
+              <div id="battery-details-container">
+                <!-- Individual battery details will be added here dynamically -->
+              </div>
             </div>
           </div>
 
@@ -174,7 +182,7 @@
           <div class="card check-interval">
             <h2>Check Interval</h2>
             <div class="setting-item">
-              <label for="check-interval">Check battery status every</label>
+              <label for="check-interval">Save battery history every</label>
               <select id="check-interval">
                 <option value="1">1 minute</option>
                 <option value="5" selected>5 minutes</option>
@@ -182,6 +190,7 @@
                 <option value="15">15 minutes</option>
                 <option value="30">30 minutes</option>
               </select>
+              <p class="setting-note">Real-time monitoring for UI updates occurs every 5 seconds</p>
             </div>
           </div>
 
