--- a/batterysense/index.html
+++ b/batterysense/index.html
@@ -10,7 +10,7 @@
   <div class="app-container">
     <header>
       <div class="logo">
-        <img src="assets/icons/icon.png" alt="BatterySense Logo">
+        <img src="assets/icons/battery-icon.png" alt="BatterySense Logo">
         <h1>BatterySense</h1>
       </div>
       <div class="tabs">
